fixed padding on people on mobile sizes

--- a/pages/inclusive/inclusive.css
+++ b/pages/inclusive/inclusive.css
@@ -75,7 +75,7 @@ body > main > div > div > p {
 .inclusive-design .statement{
     padding: 4em;
     background: #E04827;
-    background: linear-gradient(to bottom, rgba(255,255,255, 0) 0%, rgba(255,255,255, 0) 650px,rgba(224,72,39, 1) 650px);
+    background: linear-gradient(to bottom, rgba(255,255,255, 0) 0%, rgba(255,255,255, 0) 520px,rgba(224,72,39, 1) 520px);
     width: auto;
 
 }
@@ -187,11 +187,12 @@ body > main > div > div > p{
 }
 
 .inclusive-design .people.block img{
-    width: 18em;
-    height: 18em;
+    width: 100%;
+    /* height: 18em; */
     
 }
 .inclusive-design .person{
+    padding: .2em;
     margin: 0;
     background: none;
 }
@@ -231,6 +232,12 @@ body > main > div > div > div:nth-child(10){
     .inclusive-design h1{
         padding-left: var(--page-header-l-padding-tablet);
     }
+    .inclusive-design .people.block{
+        padding: 2.5em;
+    }
+    .inclusive-design .statement{
+        background: linear-gradient(to bottom, rgba(255,255,255, 0) 0%, rgba(255,255,255, 0) 500px,rgba(224,72,39, 1) 500px);
+    }
 }
 
 @media (max-width: 700px){
@@ -254,7 +261,7 @@ body > main > div > div > div:nth-child(10){
 @media (min-width: 426px) and (max-width:768px){
     .inclusive-design .statement{
         padding: 1em;
-        background: linear-gradient(to bottom, rgba(255,255,255, 0) 0%, rgba(255,255,255, 0) 450px,rgba(224,72,39, 1) 450px);
+        background: linear-gradient(to bottom, rgba(255,255,255, 0) 0%, rgba(255,255,255, 0) 380px,rgba(224,72,39, 1) 380px);
     }
     
     #wed-like-to-share-what-weve-learned-with-you{
@@ -306,7 +313,7 @@ body > main > div > div > div:nth-child(10){
 @media (min-width: 320px) and (max-width:425px){
     .inclusive-design .statement{
         padding: 1em;
-        background: linear-gradient(to bottom, rgba(255,255,255, 0) 0%, rgba(255,255,255, 0) 250px,rgba(224,72,39, 1) 250px);
+        background: linear-gradient(to bottom, rgba(255,255,255, 0) 0%, rgba(255,255,255, 0) 210px,rgba(224,72,39, 1) 210px);
     }
     .inclusive-design .statement h2{
         font-size: 1.5em;
